register new endpoint
