# src/public/swagger.json
@@ -337,10 +337,10 @@
               "schema": {
                 "type": "object",
                 "example": {
-                  "id": 0,
                   "name": "admin",
                   "email": "admin@mail.com",
                   "password": "admin123",
+                  "phone": "1234567890",
                   "role": "1",
                   "status": 1
                 }
@@ -398,6 +398,7 @@
                   "name": "admin",
                   "email": "admin@mail.com",
                   "password": "admin123",
+                  "phone": "1234567890",
                   "role": "1",
                   "status": 1
                 }
@@ -433,7 +434,7 @@
         "tags": [
           "ADMIN"
         ],
-        "summary": "Update User",
+        "summary": "Delete User",
         "parameters": [
           {
             "name": "id",
@@ -546,7 +547,7 @@
         ]
       }
     },
-    "/login": {
+    "/auth/login": {
       "post": {
         "tags": [
           "AUTH"
@@ -825,6 +826,44 @@
                     ],
                     "example": "B"
                   }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "register users",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "example": {
+                  "name": "admin",
+                  "email": "admin@mail.com",
+                  "password": "admin123",
+                  "phone": "1234567890",
+                  "role": "2",
+                  "status": 1
                 }
               }
             }
